chore: a whole bunch more cleanup